Fixing navbar colours -> selected dropdown text was illegible

--- a/grails-app/assets/stylesheets/themes/default.less
+++ b/grails-app/assets/stylesheets/themes/default.less
@@ -82,6 +82,9 @@
 @navbar-default-link-color: @white;
 @navbar-default-link-hover-color: @mc-colour-1-lightest;
 
+//@navbar-default-link-active-bg
+@navbar-default-link-active-color: @mc-colour-1-lightest;
+
 @jumbotron-bg: @mc-colour-2-lightest;
 @link-hover-color: @mc-colour-1-lighter;
 
